Command usage rework. See Command.java#usage doc